<resources>
    <string name="app_name">FYP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- My own -->
    <string name="hello">Hello There!</string>
    <string name="userID">User ID</string>
    <string name="password">Password</string>
    <string name="rememberMe">remember</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="iAmAdmin">I am an Admin!</string>
    <string name="adminLogin">Admin Login</string>
    <string name="adminID">Admin ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>