<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="#000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/noNetwork">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#fff"
            android:text="Network not Available"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reconnecting"
                android:textColor="#fff"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:indeterminateTint="#fff"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status"
                android:text="@string/hello"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userIDEditText"
                android:drawableStart="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_edit_text_background"
                android:hint="@string/userID"
                android:paddingHorizontal="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/passwordEditText"
                android:drawableStart="@drawable/ic_lock"
                android:paddingHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/login"
                android:layout_marginTop="16dp"
                android:backgroundTint="#8bbdff"
                android:text="@string/login" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/forgot"
                android:gravity="center"
                android:text="@string/forgotPassword"
                android:textColor="#8bbdff" />

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:id="@+id/admin"
            android:text="@string/iAmAdmin"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>